<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".ui.activity.PredictActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/detail_border"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_search"
            android:transitionName="photo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_gallery_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/img_preview"
            app:layout_constraintTop_toBottomOf="@+id/img_preview">

            <Button
                android:id="@+id/btn_gallery"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/mariner"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/btn_camera"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/mariner"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/camera"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hasilPredict"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:orientation="vertical"
            android:paddingTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_gallery_camera">

            <TextView
                android:id="@+id/tv_resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/detail_border"
                android:gravity="top"
                android:hint="@string/result_predict"
                android:importantForAutofill="no"
                android:minHeight="@dimen/_160sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:fontFamily="@font/opensans_semibold"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_predit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="vertical"
            android:paddingTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_hasilPredict">

            <Button
                android:id="@+id/predict"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:backgroundTint="@color/tory_blue"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/predict"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

